refactor(catalog): unify product DTOs and fix persistence synchronization
- Consolidate Create/UpdateProductRequest into a single ProductRequest DTO
- Rename internal DTOs to standard 'Request/Response' naming convention
- Fix JPA L1 cache staleness in ProductService using flush/refresh pattern
- Implement deep-cloning of pricing links (fixedValue, rulesEngine) during versioning
- Update Integration Tests to ensure correct setup of product-pricing associations
- Remove redundant SyncDTO wrappers in favor of direct List-based requests

This ensures that the @OneToMany collections are correctly populated in API
responses immediately after modification and stabilizes the versioning logic.